@@ -1,3 +1,6 @@
+2009-10-05 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* bashdoc: titlecase the output tag name
+
 2008-04-14 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* generate_tarball.sh, version: added
 	* generate-smgl-docs.sh: fixed build_api inclusion
